styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --secondary-background: rgba(217, 217, 217, 0.07);

  --primary-color: #17a24a;
}

body {
  font-family: 'Inter';
  overflow-x: hidden;
  color: #ffffff;
}

.react-tagsinput-input {
  box-sizing: border-box !important;
  font-family: 'Inter';
  width: 100px;
  background-color: #374151;
  border: 2px solid #374151;
  box-shadow: none !important;
  border-radius: 6px;
  margin: 0;
  padding: 5px 10px;
  font-weight: 500;
}


.react-tagsinput-input::placeholder {
  opacity: 0.5;
}

.react-tagsinput-input:focus {
  border: 2px solid #3b82f6;
  outline: none;
}


.react-tagsinput-tag {
  background-color: #047a55;
  color: #f0fdf4;
  border-color: #047a55;
  margin-bottom: 0;
}

